Fixed game persistence